@@ -116,7 +116,7 @@ function retval = what (dir)
         w.oct{end+1} = n;
       elseif (strcmp (e, mexext ()))
         w.mex{end+1} = n;
-      elseif (n(1) == "@" && isdir (fullfile (dir, n)))
+      elseif (n(1) == "@" && isfolder (fullfile (dir, n)))
         w.classes{end+1} = n;
       endif
     endif
